# nasdaq100-lead-lag-backtest

./: .env.example  .gitignore  Avoid Tickers By Period - Python Dict.txt  README.md  pyproject.toml  strategy description.txt
configs/: backtest.yaml  data.yaml  strategy.yaml
docs/: assumptions.md  data_notes.md  methodology.md
scripts/: generate_report.py  inspect_data.py  run_backtest.py  run_backtest_day.py  run_benchmark.py  run_comparison.py  run_pair_selection.py  run_signals.py
src/nasdaq_lead_lag/: __init__.py  config.py  constants.py
src/nasdaq_lead_lag/analytics/: drawdown.py  metrics.py  performance_table.py
src/nasdaq_lead_lag/backtest/: costs.py  engine.py  execution.py  portfolio.py  position.py  trade_log.py
src/nasdaq_lead_lag/benchmark/: qqq.py
src/nasdaq_lead_lag/data/: avoid_tickers.py  calendar.py  cleaning.py  loader.py  validation.py
src/nasdaq_lead_lag/reporting/: exports.py  plots.py
src/nasdaq_lead_lag/research/: correlations.py  indicators.py  pairs.py  signals.py  universe.py
tests/integration/: test_backtest_engine.py
tests/unit/: test_backtest_day.py  test_correlations.py  test_costs.py  test_drawdown.py  test_execution.py  test_metrics.py  test_pairs.py  test_pnl.py  test_signals.py  test_universe.py
